# PA

./: .env.example  .gitignore  CLAUDE.md  SETUP.md  config.example.json  config.json  pyproject.toml  start.sh
data/: vault.params.json
deploy/: cli-proxy-api.service  cliproxy-config.yaml  push-to-pi.sh  setup-pi.sh
docs/ideas/: ai-company-multi-agent-orchestration.md
pa/: __main__.py  exceptions.py
pa/bot/: bot.py  handlers.py
pa/brain/: __init__.py  brain.py  cost_tracker.py  tier.py
pa/config/: __init__.py  config.py
pa/core/: app.py  bot.py  brain.py  cost_tracker.py  exceptions.py  identity.py  scheduler.py  schema.sql  store.py  tier.py
pa/plugins/: __init__.py
pa/scheduler/: __init__.py  scheduler.py
pa/scrapers/: base.py  mfa_bridge.py  page_analyzer.py  pilot.py  recipe.py  session_store.py
pa/store/: __init__.py  schema.sql  store.py
pa/vault/: __init__.py  crypto.py  vault.py
tests/: conftest.py  test_bot.py  test_bot_integration.py  test_brain.py  test_brain_cost_tracker.py  test_brain_tier.py  test_config.py  test_exceptions.py  test_integration.py  test_mfa_bridge.py  test_scheduler.py  test_scraper_base.py  test_store.py  test_vault.py  test_vault_crypto.py
tests/core/: test_bot.py  test_brain.py  test_config.py  test_cost_tracker.py  test_exceptions.py  test_identity.py  test_plugin_registry.py  test_recipe.py  test_scheduler.py  test_store.py  test_tier.py
tests/scrapers/: test_mfa_bridge.py  test_page_analyzer.py  test_pilot.py  (+3 more)
tools/: debug_scrape.py  google_auth.py  google_reauth.py  probe_wf.py  teller_enroll.py
(+85 files in other folders)
